k8s/middleware-slash.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-hangul-slash
  namespace: default
spec:
  redirectRegex:
    regex: "^(https?://[^/]+/hangul-play)$"
    replacement: "${1}/"
    permanent: true
