k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-hangul-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /hangul-play
