k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hangul-play-svc
spec:
  selector:
    app: hangul-play
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
