k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hangul-play
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: PathPrefix(`/hangul-play`)
      kind: Rule
      middlewares:
        - name: add-hangul-slash
      services:
        - name: hangul-play-svc
          port: 80
  tls:
    secretName: local-selfsigned-tls
